--- a/index.html
+++ b/index.html
@@ -11,20 +11,21 @@
 <body>
 
   <!-- Top Nav Bar -->
-<ul class="nav nav-tabs">
-  <li class="nav-item">
-    <a class="nav-link active" href="#">Main Page</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Talk</a>
-  </li>
+
+<div class="nav">
+  <ul class="nav nav-tabs">
+    <li class="nav-item">
+      <a class="nav-link active" href="#">Main Page</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Talk</a>
+    </li>
+</div>
 
 <!-- Welcome Message -->
 </ul>
   <div class="well">
       <div class="row">
-
-
     <p>Welcome to fake-wiki, suckers</p>
 <div class="header-lists">
     <div class="left-links">
@@ -69,4 +70,5 @@
 </div>
       
 </body>
+
 </html>
