--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
   <title>Fake Wiki</title>
 </head>
 <body>
-
   <!-- Top Nav Bar -->
-
 <div class="nav">
   <ul class="nav nav-tabs">
     <li class="nav-item">
@@ -21,6 +19,9 @@
       <a class="nav-link" href="#">Talk</a>
     </li>
 </div>
+
+<!-- Search form -->
+<input class="form-control" type="text" placeholder="Search" aria-label="Search">
 
 <!-- Welcome Message -->
 </ul>
@@ -33,7 +34,6 @@
         <div class="col-md-6">
       </div>
     <!-- Header Links -->
-
   <div class="header-lists">
     <div class="left-links">
       <div class="col-md-2">
@@ -43,7 +43,7 @@
           <li>Geography</li>
         </ul>
       </div>
-
+      </div>
   <div class="middle-links">
       <div class="col-md-2">
     <ul>
@@ -64,11 +64,49 @@
       </div>
         </div>
       </div>
-    </div>  
+      
+  </div>
+  </div>
+  </div>     
   </div>
 </div>
+
+<div class="row">
+    <div class="col-md-6">
+    <div class="panel panel-success">
+    <div class="panel-heading">
+  <h2 class="panel-title">Featured Articles</h2>
+    </div>
+    <div class="panel-body">
+  <p>Ham Wall is an English wetland and National Nature Reserve located 4 kilometres (2.5 mi) west of Glastonbury on the Somerset Levels. It is managed by the Royal Society for the Protection of Birds, which helps coordinate conservation issues across the Somerset Levels as part of the Avalon Marshes Partnership. The reserve was constructed originally to provide reed bed habitat for the bittern, which in 1997 was at a low population level in the UK. The site is divided into sections with independently controllable water levels, and machinery and cattle are used to maintain the quality of the reed beds. The reserve hosts important breeding populations of the rare little bittern and great white egret, and has other uncommon animals and plants. Potential future threats may include heavy summer rains and extensive flooding. Sea level rise may make drainage more difficult, and current water pumping facilities may become inadequate. (Full article...),</p>
+    </div>
+    </div>
+  </div>
+
+  <div class="col-md-6">
+  <div class="panel panel-info">
+    <div class="panel-heading">
+  <h2 class="panel-title">In the news</h2>
+    </div>
+    <div class="panel-body">
+  <ul>
+    <li>visit anyplace!!!</li>
+    <li class="bg-info">visit tardas</li>
+    <li>visit vietnam</li>
+ </ul>
 </div>
-      
+</div>
+</div>
+</div>
+
+<div class="panel panel-danger">
+    <div class="panel-heading">
+  <h2 class="panel-title">Featured Picture</h2>
+    </div>
+  </div>
+
+
+
 </body>
 
 </html>
