add featured picture

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
       <a class="nav-link" href="#">Talk</a>
     </li>
 </div>
-
 <!-- Search form -->
 <input class="form-control" type="text" placeholder="Search" aria-label="Search">
 
@@ -95,13 +94,14 @@
 </div>
 </div>
 
-<div class="panel panel-danger">
-    <div class="panel-heading">
-  <h2 class="panel-title">Featured Picture</h2>
+<div class="picture">
+  <div class="panel panel-danger">
+      <div class="panel-heading">
+    <h2 class="panel-title">Featured Picture</h2>
+      </div>
+    <img src="img/pdx.jpg" alt="A picture of Portland">
     </div>
-
-  </div>
-
+</div>
 
 
 </body>
