add comment to picture

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
     <h2 class="panel-title">Featured Picture</h2>
       </div>
     <img src="img/pdx.jpg" alt="A picture of Portland">
-    </div>
-</div>
-
+    <p>here is Porland!</p>
+     </div>
+     </div>
 
 </body>
 
